--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,13 @@
 // general colors
 $react: #21232a;
-$white: azure;
+
+
+// colors
+$primary: #5C62C5;
+$dark-grey: #363636;
+$light-grey: #d8d8d8;
+
+// google
+$white: #fff;
+$google-blue: #4285f4;
+$button-active-blue: #1669f2;
