--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,11 @@
+// base
 @import './base/settings';
 @import './base/base';
+
+// Components
+@import './components/auth';
+@import './components/buttons';
+@import './components/links';
+@import './components/journal';
+@import './components/nothing';
+@import './components/notes';
