--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -2,7 +2,7 @@
 .btn {
     background-color: transparent;
     border: none;
-    color: white;
+    color: azure;
     cursor: pointer;
     font-size: 12px;
     padding: 7px 10px 7px 10px;
