--- a/src/styles/components/_links.scss
+++ b/src/styles/components/_links.scss
@@ -1,9 +1,9 @@
 
 .link {
-    color: $dark-grey;
+    color: lighten($color: $primary, $amount: 20);
     text-decoration: none;
 
     &:hover {
         text-decoration: underline;
-    }
+    } 
 }
